--- a/blog/src/data/pages/about.mdx
+++ b/blog/src/data/pages/about.mdx
@@ -21,12 +21,12 @@ I've started this website to share thoughts and ideas that inspire me about:
 ### A walk down Memory Lane
 
 I've been interested in computers since I can remember, starting to code as a hobby when I was 14 years old.  
-In my teenage years, I wrote several programs, among them: a Visual Basic program connected to a Microsoft SQL Server for my dad, a Geocities website full of GIFs, a few simple games, an assembler program that froze my computer, and many more useless programs.
+In my teenage years, I wrote several programs, among them: a Visual Basic program connected to a Microsoft SQL Server for my dad, a Geocities website full of GIFs, a few simple games, an assembler program that froze my computer, and other simple programs.
 
 <br/>
 
 When I was 15, I read about Linux and open-source software and quickly fell in love with the idea. With a lot of effort, I was able to set up my first Linux box. It was Red Hat 4.2.  
-I dreamed about being a hacker at that time. And loved to learn about Linux, network basics, and stories about Captain Crunch and other heroes of the cyberpunk culture.  
+I dreamed about being a hacker at that time. And loved to learn about Linux, network basics, and read amazing stories about Captain Crunch and other heroes of the cyberpunk culture.  
 
 <br/>
 
@@ -34,7 +34,7 @@ By the time I went into college I was looking for a change and tried Psychology;
 
 <br/>
 
-Today I love to write well documented, solid code. And I am constantly challenging myself to learn about industry best practices, design patterns and DevOps tools to understand problems across multiple technical layers to plan effective solutions.  
+Today I love to write well documented, solid code. And I am constantly challenging myself to learn about industry best practices, design patterns and DevOps tools to understand problems across multiple technical layers, and be able to design effective solutions.  
 I'm always trying to improve my technical skills. But at the same time, I believe that the human dimension plays a key role in most technical problems, and many times, achieving effective communication and collaboration between teams can provide better returns than aiming to fix an issue from a purely technical perspective.
 
 ### I am basically, but not exclusively
