fixing url issues

--- a/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
+++ b/blog/src/data/blog/04-03-2020-php-docker-development-environment.mdx
@@ -1,5 +1,5 @@
 ---
-slug: "build-a-docker-development-environment-for-php-projects/index.html"
+slug: "build-a-docker-development-environment-for-php-projects"
 title: "A PHP development environment your team will love"
 intro: "In this comprehensive introductory guide into Docker fundamentals, you will learn how to build a custom made PHP 7.4 development environment, fully-featured with powerful tools to boost your team's productivity and overall development experience"
 tools: "docker gnumake php apache"
